@@ -17,12 +17,12 @@
 
     <properties>
         <modules.root.dir>${basedir}/..</modules.root.dir>
-        <cargo.install.directory>${basedir}/target/installs</cargo.install.directory>
         <selenium.background>true</selenium.background>
         <selenium.log.output>true</selenium.log.output>
+        <SELENIUM_PORT>4445</SELENIUM_PORT>
+        <SERVLET_PORT>8083</SERVLET_PORT>
+        <stop.port>8005</stop.port>
         <jetty.version>7.3.0.v20110203</jetty.version>
-        <jetty.container.url>http://download.eclipse.org/jetty/stable-7/dist/jetty-distribution-${jetty.version}.zip</jetty.container.url>
-        <cargo.wait>false</cargo.wait>
         <jdk.version>1.6</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -43,100 +43,6 @@
     </properties>
 
     <profiles>
-        <profile>
-            <id>download-container</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <jetty.home.directory>${cargo.install.directory}/${container.name}/jetty-${jetty.version}/</jetty.home.directory>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.0.5</version>
-                        <configuration>
-                            <container>
-                                <zipUrlInstaller>
-                                    <url>${container.url}</url>
-                                    <installDir>${cargo.install.directory}/${container.name}</installDir>
-                                </zipUrlInstaller>
-                                <output>${java.io.tmpdir}/${user.name}-cargo/conf/logs/server-console.log</output>
-                            </container>
-                            <configuration>
-                                <home>${java.io.tmpdir}/${user.name}-cargo/conf</home>
-                                <properties>
-                                    <cargo.jvmargs>-Xms1024m -Xmx1024m -XX:MaxPermSize=128m</cargo.jvmargs>
-                                    <cargo.maven.skip>${maven.test.skip}</cargo.maven.skip>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>local-container</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.0.5</version>
-                        <configuration>
-                            <container>
-                                <home>${jetty.home.directory}</home>
-                            </container>
-                            <configuration>
-                                <type>standalone</type>
-                                <home>${jetty.deploy.directory}</home>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>tomcat6x</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <container.name>jetty7x</container.name>
-                <container.url>${jetty.container.url}</container.url>
-                <war.target>${jetty.home.directory}/webapps</war.target>
-            </properties>
-            <build>
-                <plugins>
-                    <!-- copy customized configuration files to the application server -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>process-resources</phase>
-                                <configuration>
-                                    <skip>${maven.test.skip}</skip>
-                                    <tasks>
-                                        <copy todir="${jetty.home.directory}/conf" overwrite="true">
-                                            <fileset dir="${basedir}/src/test/containers/${container.name}" />
-                                        </copy>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>firefox</id>
             <activation>
@@ -161,21 +67,25 @@
         <profile>
             <id>dev</id>
             <properties>
-                <cargo.wait>true</cargo.wait>
                 <selenium.background>false</selenium.background>
                 <selenium.log.output>false</selenium.log.output>
-                <selenium.port>4445</selenium.port>
+            </properties>
+        </profile>
+        <profile>
+            <id>allTests</id>
+            <properties>
+                <!-- leaving <acceptanceTest.groups.to.run> empty means to run everything -->
+                <acceptanceTest.groups.to.run></acceptanceTest.groups.to.run>
             </properties>
         </profile>
         <profile>
             <id>continuous-integration</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
             <properties>
-                <jetty.container.url>file:///home/hudson/arc/jetty-distribution-${jetty.version}.zip</jetty.container.url>
                 <!-- leaving <acceptanceTest.groups.to.run> empty means to run everything -->
                 <acceptanceTest.groups.to.run></acceptanceTest.groups.to.run>
+                <SELENIUM_PORT>${env.SELENIUM_PORT}</SELENIUM_PORT>
+                <SERVLET_PORT>${env.SERVLET_PORT}</SERVLET_PORT>
+                <stop.port>${env.CI_JETTY_STOP_PORT}</stop.port>
             </properties>
             <build>
                 <plugins>
@@ -183,6 +93,17 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>properties-maven-plugin</artifactId>
                         <version>1.0-alpha-1</version>
+                        <executions>
+                            <execution>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>write-project-properties</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <outputFile>${project.build.directory}/maven.properties</outputFile>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
@@ -281,10 +202,9 @@
                             <quiet>true</quiet>
                             <files>
                                 <file>${database.properties.file}</file>
-                                <file>${acceptanceTest.settings}</file>
+                                <file>${mifos.overrides.home}</file>
                                 <file>${mifos.overrides.conf}</file>
                                 <file>${mifos.overrides.env}</file>
-                                <file>${mifos.overrides.home}</file>
                             </files>
                         </configuration>
                     </execution>
@@ -339,9 +259,7 @@
                         <configuration>
                             <sqlCommand>USE ${acceptance.database}</sqlCommand>
                             <srcFiles>
-                                <srcFile>${sql.resources.main.directory}/base-schema.sql</srcFile>
-                                <srcFile>${sql.resources.main.directory}/base-data.sql</srcFile>
-                                <srcFile>${sql.resources.test.directory}/acceptance_test_data.sql</srcFile>
+                                <srcFile>${sql.resources.test.directory}/acceptance_test_dump.sql</srcFile>
                                 <srcFile>${sql.resources.main.directory}/init_mifos_password.sql</srcFile>
                             </srcFiles>
                         </configuration>
@@ -386,11 +304,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4.3</version>
                 <configuration>
-                    <groups>${acceptanceTest.groups.to.run}</groups>
-                    <excludedGroups>workInProgress</excludedGroups>
-                    <!--
-                        Skip the normal tests, we'll run them in the integration-test phase
-                    -->
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <skip>true</skip>
                     <systemProperties>
@@ -399,45 +312,58 @@
                             <value>${browser}</value>
                         </property>
                         <property>
-                            <name>servlet.port</name>
-                            <value>${servlet.port}</value>
+                            <name>SERVLET_PORT</name>
+                            <value>${SERVLET_PORT}</value>
                         </property>
                         <property>
-                            <name>selenium.port</name>
-                            <value>${selenium.port}</value>
+                            <name>SELENIUM_PORT</name>
+                            <value>${SELENIUM_PORT}</value>
                         </property>
                     </systemProperties>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>run_db_unit_independent</id>
                         <phase>integration-test</phase>
                         <goals>
                             <goal>test</goal>
                         </goals>
                         <configuration>
+                            <groups>no_db_unit</groups>
+                            <excludedGroups>workInProgress</excludedGroups>
                             <skip>${maven.test.skip}</skip>
+                            <failIfNoTests>false</failIfNoTests>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>run_db_unit_dependent</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <groups>${acceptanceTest.groups.to.run}</groups>
+                            <excludedGroups>no_db_unit,workInProgress</excludedGroups>
+                            <skip>${maven.test.skip}</skip>
+                            <failIfNoTests>false</failIfNoTests>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.0.5</version>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.version}</version>
                 <executions>
-                    <execution>
-                        <id>install</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                    </execution>
                     <execution>
                         <id>start-container</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>start</goal>
+                            <goal>run-war</goal>
                         </goals>
+                        <configuration>
+                            <daemon>true</daemon>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>stop-container</id>
@@ -449,34 +375,23 @@
                 </executions>
                 <configuration>
                     <skip>${maven.test.skip}</skip>
-                    <wait>${cargo.wait}</wait>
-                    <container>
-                        <containerId>${container.name}</containerId>
-                        <log>${basedir}/target/logs/${container.name}.log</log>
-                        <output>${basedir}/target/logs/${container.name}.out</output>
-                        <timeout>600000</timeout>
-                        <systemProperties>
-                            <mifos.mode>acceptance</mifos.mode>
-                        </systemProperties>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>${servlet.port}</cargo.servlet.port>
-                            <cargo.jboss.configuration>default</cargo.jboss.configuration>
-                            <cargo.rmi.port>1099</cargo.rmi.port>
-                        </properties>
-                        <deployables>
-                            <deployable>
-                                <groupId>org.mifos</groupId>
-                                <artifactId>mifos-war</artifactId>
-                                <type>war</type>
-                                <properties>
-                                    <context>mifos</context>
-                                </properties>
-                                <pingURL>http://localhost:${servlet.port}/mifos/ping.ftl</pingURL>
-                            </deployable>
-                        </deployables>
-                    </configuration>
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>${SERVLET_PORT}</port>
+                        </connector>
+                    </connectors>
+                    <webAppConfig>
+                        <contextPath>/mifos</contextPath>
+                    </webAppConfig>
+                    <stopKey>secret</stopKey>
+                    <stopPort>${stop.port}</stopPort>
+                    <webApp>${basedir}/../war/target/mifos.war</webApp>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>mifos.mode</name>
+                            <value>acceptance</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
             <plugin>
@@ -495,7 +410,7 @@
                 <configuration>
                     <skip>${maven.test.skip}</skip>
                     <background>${selenium.background}</background>
-                    <port>${selenium.port}</port>
+                    <port>${SELENIUM_PORT}</port>
                     <logOutput>${selenium.log.output}</logOutput>
                     <browserSideLog>true</browserSideLog>
                 </configuration>
